[workspace]
resolver = "2"
members = [
    "crates/nesemulator",
    "crates/nesemulator_gui",
    "crates/nesemulator_sdl2_egui",
]

[profile.release]
#incremental = true
#codegen-units = 256


opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
