[package]
name = "nesemulator_sdl2_egui"
version = "0.2.0"
authors = ["niketin <Niketin@users.noreply.github.com>"]
edition = "2018"

[dependencies]
sdl2 = "0.35.2"
egui = "0.19.0"
epaint = "0.19.0"
log = "0.4.8"
env_logger = "0.9.0"
itertools = "0.10.3"
gl = "0.14.0"

[lib]
name = "sdl2_egui"
path = "src/lib.rs"

